fixed scala version + updates to benchmark