@@ -4,9 +4,8 @@ import java.io.FileWriter;
 import java.io.IOException;
 import java.time.Duration;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
+import java.util.Locale;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
@@ -39,12 +38,12 @@ public class BenchmarkFixedRate extends BenchmarkDelayRate {
     }
 
     public static void main(String[] args) throws IOException {
-        BenchmarkFixedRate rate = new BenchmarkFixedRate("localhost", true);
-//        rate.disableBaseline();
+        Locale.setDefault(Locale.ROOT);
+        BenchmarkFixedRate rate = new BenchmarkFixedRate(args.length == 0 ? "localhost" : args[0], false);
+        rate.disableBaseline();
         rate.redirectOutputs();
-        List<String> procNames = Arrays.asList("pythonjude", "javaquarkus", "ruby", "golang", "node");
-        Collections.shuffle(procNames);
-        Duration testDuration = Duration.ofSeconds(180);
+        List<String> procNames = List.of("scala"); //rate.allProcessNames();
+        Duration testDuration = Duration.ofSeconds(120);
         List<RateInputParameters> list = new ArrayList<>();
         for (var proc : procNames) {
             int numberOfClients = 8;
@@ -54,8 +53,14 @@ public class BenchmarkFixedRate extends BenchmarkDelayRate {
                 numberOfClients /= 2;
                 reqsPerSecond *= 2.0;
             }
+//            numberOfClients = 16;
+//            reqsPerSecond = 1;
+//            while (numberOfClients >= 1) {
+//                list.add(new RateInputParameters(proc, testDuration, numberOfClients, reqsPerSecond));
+//                numberOfClients /= 2;
+//                reqsPerSecond *= 2.0;
+//            }
         }
-        Collections.reverse(list);
         rate.runAllWriteResults(list);
     }
 
